Missed some required files when committing RollupChild__c/RollupParent__c. Fixed a few broken tests, attributed @jongpie in Readme for fixing #84, and bumped package version

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -1471,8 +1471,11 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   ) {
     DescribeSObjectResult sObjectToken = sObjectType.getDescribe();
     Map<String, SObjectField> baseFields = sObjectToken.fields.getMap();
-    for (Integer index = 0; index < uniqueQueryFieldNames.size(); index++) {
+    for (Integer index = uniqueQueryFieldNames.size() - 1; index >= 0; index--) {
       String uniqueFieldName = uniqueQueryFieldNames[index];
+      if (String.isBlank(uniqueFieldName)) {
+        uniqueQueryFieldNames.remove(index);
+      }
       String paredFieldName = getParedFieldName(uniqueFieldName);
       // ensure that the base relationship name field is transformed appropriately
       if (baseFields.containsKey(paredFieldName + 'Id') || baseFields.containsKey(paredFieldName + '__c')) {
