--- a/rollup/tests/RollupEvaluatorTests.cls
+++ b/rollup/tests/RollupEvaluatorTests.cls
@@ -338,7 +338,11 @@ private class RollupEvaluatorTests {
 
     Opportunity secondOpp = new Opportunity(Id = '0066g000000000000Z', StageName = 'Same', Amount = 25);
 
-    Rollup__mdt rollupMetadata = new Rollup__mdt(ChangedFieldsOnCalcItem__c = 'StageName', CalcItemWhereClause__c = 'Amount > 20');
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      ChangedFieldsOnCalcItem__c = 'StageName',
+      CalcItemWhereClause__c = 'Amount > 20',
+      RollupOperation__c = Rollup.Op.SUM.name()
+    );
 
     Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
       null,
@@ -356,7 +360,11 @@ private class RollupEvaluatorTests {
     Opportunity oldOpp = opp.clone(true, true);
     oldOpp.AccountId = '0013g000000000000Z';
 
-    Rollup__mdt rollupMetadata = new Rollup__mdt(LookupFieldOnCalcItem__c = 'AccountId', CalcItemWhereClause__c = 'Amount > 20');
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      LookupFieldOnCalcItem__c = 'AccountId',
+      CalcItemWhereClause__c = 'Amount > 20',
+      RollupOperation__c = Rollup.Op.SUM.name()
+    );
 
     Rollup.Evaluator eval = RollupEvaluator.getEvaluator(null, rollupMetadata, new Map<Id, SObject>{ oldOpp.Id => oldOpp }, Opportunity.SObjectType);
     System.assertEquals(true, eval.matches(opp), 'Should match since StageName has changed and amount > 20');
@@ -368,7 +376,7 @@ private class RollupEvaluatorTests {
     Opportunity oldOpp = opp.clone(true, true);
     oldOpp.AccountId = '0013g000000000000Z';
 
-    Rollup__mdt rollupMetadata = new Rollup__mdt(LookupFieldOnCalcItem__c = 'AccountId');
+    Rollup__mdt rollupMetadata = new Rollup__mdt(LookupFieldOnCalcItem__c = 'AccountId', RollupOperation__c = Rollup.Op.SUM.name());
 
     Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
       new AlwaysTrueEval(),
@@ -380,6 +388,27 @@ private class RollupEvaluatorTests {
   }
 
   @isTest
+  static void shouldReturnChangedFieldEval() {
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50);
+    Opportunity oldOpp = opp.clone(true, true);
+    oldOpp.Amount = 25;
+
+    Opportunity secondOpp = new Opportunity(Id = '0066g000000000000Z', Amount = 15);
+
+    Rollup__mdt rollupMetadata = new Rollup__mdt(ChangedFieldsOnCalcItem__c = 'Amount', RollupOperation__c = Rollup.Op.SUM.name());
+
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>{ oldOpp.Id => oldOpp, secondOpp.Id => secondOpp },
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should match since amount changed');
+    System.assertNotEquals(true, eval.matches(secondOpp), 'Should not match amount did not change');
+  }
+
+  @isTest
   static void shouldReturnDualEvaluatorWhenEvalIsPassedAndCalcItemWhereClause() {
     Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50);
     Opportunity oldOpp = opp.clone(true, true);
@@ -387,7 +416,7 @@ private class RollupEvaluatorTests {
 
     Opportunity secondOpp = new Opportunity(Id = '0066g000000000000Z', Amount = 15);
 
-    Rollup__mdt rollupMetadata = new Rollup__mdt(CalcItemWhereClause__c = 'Amount > 20');
+    Rollup__mdt rollupMetadata = new Rollup__mdt(CalcItemWhereClause__c = 'Amount > 20', RollupOperation__c = Rollup.Op.SUM.name());
 
     Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
       new AlwaysTrueEval(),
@@ -408,7 +437,11 @@ private class RollupEvaluatorTests {
 
     Opportunity secondOpp = new Opportunity(Id = '0066g000000000000Z', StageName = 'Same', Amount = 25);
 
-    Rollup__mdt rollupMetadata = new Rollup__mdt(ChangedFieldsOnCalcItem__c = 'StageName', CalcItemWhereClause__c = 'Amount > 20');
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      ChangedFieldsOnCalcItem__c = 'StageName',
+      CalcItemWhereClause__c = 'Amount > 20',
+      RollupOperation__c = Rollup.Op.SUM.name()
+    );
 
     Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
       new AlwaysTrueEval(),
@@ -464,6 +497,230 @@ private class RollupEvaluatorTests {
 
     System.assertNotEquals(null, ex);
     System.assertEquals(true, ex.getMessage().contains(expectedException));
+  }
+
+  @isTest
+  static void shouldFilterRecursiveUpdates() {
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId'
+      ),
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, AccountId = '0016g000000000000X');
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive twice!');
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive thrice!');
+
+    eval = RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId'
+      ),
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(false, eval.matches(opp), 'Should not return true when recursive');
+  }
+
+  @isTest
+  static void shouldNotFilterRecursiveUpdatesWhenGrandparentRelationshipFieldFilledOut() {
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId',
+        GrandparentRelationshipFieldPath__c = 'Some.Field.Path'
+      ),
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, AccountId = '0016g000000000000X');
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+
+   eval = RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId'
+      ),
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when recursive and grandparent field path filled out');
+  }
+
+  @isTest
+  static void shouldNotFilterRecursiveUpdatesWhenRollupToUltimateParentIsTrue() {
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId',
+        RollupToUltimateParent__c = true
+      ),
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, AccountId = '0016g000000000000X');
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+
+    eval = RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId'
+      ),
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when recursive and ultimate parent field true');
+  }
+
+  @isTest
+  static void shouldWorkWithTripleEvaluator() {
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, StageName = 'Updated Name', AccountId = '0016g000000000000X');
+    Opportunity oldOpp = opp.clone(true, true);
+    oldOpp.StageName = 'Old Name';
+
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+      ChangedFieldsOnCalcItem__c = 'StageName',
+      CalcItemWhereClause__c = 'Amount > 20',
+      RollupFieldOnCalcItem__c = 'Amount',
+      LookupFieldOnCalcItem__c = 'AccountId'
+    );
+
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>{ oldOpp.Id => oldOpp },
+      Opportunity.SObjectType
+    );
+
+    RollupEvaluator.getEvaluator(
+      null,
+      new Rollup__mdt(
+        RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+        RollupFieldOnCalcItem__c = 'Amount',
+        LookupFieldOnCalcItem__c = 'AccountId'
+      ),
+      new Map<Id, SObject>{ oldOpp.Id => oldOpp },
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+    System.assertEquals(false, eval.matches(opp), 'Should not return true when recursive and all other conditions true');
+  }
+
+  @isTest
+  static void shouldWorkWithChangedFieldsAndRecursionDetection() {
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, StageName = 'Updated Name', AccountId = '0016g000000000000X');
+    Opportunity oldOpp = opp.clone(true, true);
+    oldOpp.StageName = 'Old Name';
+
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+      ChangedFieldsOnCalcItem__c = 'StageName',
+      RollupFieldOnCalcItem__c = 'Amount',
+      LookupFieldOnCalcItem__c = 'AccountId'
+    );
+
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>{ oldOpp.Id => oldOpp },
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+
+    eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>{ oldOpp.Id => oldOpp },
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(false, eval.matches(opp), 'Should not return true when recursive and all other conditions true');
+  }
+
+  @isTest
+  static void shouldWorkWithCalcItemWhereClauseAndRecursionDetection() {
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, AccountId = '0016g000000000000X');
+    Opportunity nonMatchingOpp = new Opportunity(Id = '0066g000000000000Y', Amount = 15, AccountId = '0016g000000000000X');
+
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+      CalcItemWhereClause__c = 'Amount > 20',
+      RollupFieldOnCalcItem__c = 'Amount',
+      LookupFieldOnCalcItem__c = 'AccountId'
+    );
+
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+
+    eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(false, eval.matches(opp), 'Should not return true when recursive and all other conditions true');
+    System.assertEquals(false, eval.matches(nonMatchingOpp), 'Should not match to begin with based on calc item where clause');
+  }
+
+  @isTest
+  static void shouldBailOnRecursionDetectionForFullRecordSetRollup() {
+    Opportunity opp = new Opportunity(Id = '0066g000000000000X', Amount = 50, AccountId = '0016g000000000000X');
+
+    Rollup__mdt rollupMetadata = new Rollup__mdt(
+      RollupOperation__c = Rollup.Op.UPDATE_CONCAT_DISTINCT.name(),
+      RollupFieldOnCalcItem__c = 'Amount',
+      LookupFieldOnCalcItem__c = 'AccountId',
+      IsFullRecordSet__c = true
+    );
+
+    Rollup.Evaluator eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when not recursive!');
+
+    eval = RollupEvaluator.getEvaluator(
+      new AlwaysTrueEval(),
+      rollupMetadata,
+      new Map<Id, SObject>(),
+      Opportunity.SObjectType
+    );
+
+    System.assertEquals(true, eval.matches(opp), 'Should return true when recursive and full record set');
   }
 
   private class AlwaysTrueEval implements Rollup.Evaluator {
