Fixes #95 by fixing restrictiveness level for RollupEvaluator

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -982,7 +982,7 @@ public without sharing abstract class RollupCalculator {
     }
 
     public void setMetadata(Rollup__mdt metadata) {
-      this.orderByField = metadata.OrderByFirstLast__c;
+      this.orderByField = String.isNotBlank(metadata.OrderByFirstLast__c) ? metadata.OrderByFirstLast__c : metadata.RollupFieldOnCalcItem__c;
       this.lookupFieldOnCalcItem = metadata.LookupFieldOnCalcItem__c;
     }
 
